--- a/src/style.scss
+++ b/src/style.scss
@@ -106,7 +106,7 @@
 
 #signupform input{
     text-align: left;
-    width:200px;
+    width:15vw;
     margin: 5px;
     height:50px;
     padding:5px;
@@ -117,7 +117,7 @@
 
 #SignUp{
     height:50px;
-    width:211px;
+    width:15.5vw;
     margin: 5px;
     background-color:#36a420;
     color:white;
@@ -133,7 +133,7 @@
 
 #loginBtnBack{
     height:50px;
-    width:211px;
+    width:15.5vw;
     margin: 5px;
     background-color:#1877f2;
     color:white;
