--- a/src/style.scss
+++ b/src/style.scss
@@ -162,3 +162,9 @@
     41.8px 41.8px 36.6px rgba(0, 0, 0, 0.059),
     100px 100px 80px rgba(0, 0, 0, 0.07);
 }
+
+
+// User Profile Page
+#userProfilePicture {
+    height:30vh;
+}
