--- a/src/style.scss
+++ b/src/style.scss
@@ -54,6 +54,7 @@
 body, html {
   margin: 0;
   padding: 0;
+  overflow-x: hidden;
 }
 
 // Login Page
@@ -400,26 +401,27 @@ body, html {
 }
 
 #statusInput{
-    width:calc(100% - 10vw);
+    width:calc(100% - 3vw);
     border-radius: 10px;
     background-color: #4E4F50;
     border:0px;
     padding: 5px;
     padding-left: 10px;
-    color:#AFB2B5
+    color:#AFB2B5;
+    cursor: pointer;
 }
 
-#statusProPic{
+#statusInput:hover {
+    background-color: #5a5b5c;
+}
+
+.statusProPic{
     background-position: center center;
     object-fit: cover;
     height:4vh;
     width: 4vh;
     border-radius: 100%;
     margin-right:10px;
-}
-
-.status_types{
-    margin-left:10px;
 }
 
 .status_types:hover{
@@ -431,4 +433,44 @@ body, html {
     background-color:#0B5ED7;
     border-radius: 10px;
     margin-left:5px;
+}
+
+// Make a post
+#makeAPost{
+    height:40vh;
+    width:40vw;
+    background-color: #242526;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    border-radius: 10px;
+    padding: 30px;
+    font-family: 'Ruda', sans-serif;
+    z-index: 20;
+}
+
+#postInput{
+    width: 100%;
+    margin-top: 10px;
+    background-color: #242526;
+    color: white;
+    border: 0px;
+}
+
+#postInput:focus{
+    outline: none;
+}
+
+#postOverlay{
+    position:absolute;
+    top:0;
+    left:0;
+    height:100vh;
+    width:100vw;
+    z-index:19;
+    background:linear-gradient(to right, rgba(0,0,0,0.7), rgba(0,0,0,0.7));
+    overflow-x: hidden;
+    overflow-y: hidden;
 }
