--- a/src/style.scss
+++ b/src/style.scss
@@ -231,8 +231,9 @@ body, html {
 }
 
 #userProfileContainer{
-    height:100vh;
+    height:fit-content;
     background-color: #18191A;
+    padding: 10px;
 }
 
 #userProfilePicture {
@@ -467,10 +468,32 @@ body, html {
     position:absolute;
     top:0;
     left:0;
-    height:100vh;
+    height:100%;
     width:100vw;
     z-index:19;
     background:linear-gradient(to right, rgba(0,0,0,0.7), rgba(0,0,0,0.7));
     overflow-x: hidden;
     overflow-y: hidden;
+}
+
+// User Posts
+#userPosts{
+    height: fit-content;
+    border-radius: 10px;
+}
+
+#userPostsLabel{
+    height: fit-content;
+    background-color:#242526;
+    padding:20px;
+    border-radius: 10px;
+}
+
+#post{
+    width: 100%;
+    height: fit-content;
+    background-color:#242526;
+    padding: 20px;
+    border-radius: 10px;
+    margin-top:10px;
 }
