--- a/src/style.scss
+++ b/src/style.scss
@@ -438,7 +438,7 @@ body, html {
 
 // Make a post
 #makeAPost{
-    height:40vh;
+    height:inherit;
     width:40vw;
     background-color: #242526;
     position: absolute;
@@ -496,4 +496,18 @@ body, html {
     padding: 20px;
     border-radius: 10px;
     margin-top:10px;
+}
+
+#postImage{
+    width: 100%;
+    text-align: center;
+    border:1px solid #9A9B9B;
+    border-radius: 10px;
+    padding: 70px 0;
+    cursor: pointer;
+}
+
+#postImagePreview{
+    width:100%;
+    max-height: 80vh;
 }
